--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,4 +1,4 @@
-# See: https://docs.github.com/en/github/administering-a-repository/configuration-options-for-dependency-updates#assignees
+# See: https://docs.github.com/en/github/administering-a-repository/configuration-options-for-dependency-updates#about-the-dependabotyml-file
 version: 2
 
 updates:
@@ -6,12 +6,18 @@ updates:
   # See: https://docs.github.com/en/github/administering-a-repository/keeping-your-actions-up-to-date-with-dependabot
   - package-ecosystem: github-actions
     directory: / # Check the repository's workflows under /.github/workflows/
+    schedule:
+      # Check for updates to GitHub Actions every weekday
+      interval: "daily"
     assignees:
       - per1234
 
   # Configure check for outdated GitHub Actions actions in workflow templates.
   - package-ecosystem: github-actions
     directory: /workflow-templates/dependabot-copies/ # The workflows under the .github/workflows/ subfolder will be checked.
+    schedule:
+      # Check for updates to GitHub Actions every weekday
+      interval: "daily"
     commit-message:
       prefix: (DO NOT MERGE)
     assignees:
