--- a/workflow-templates/assets/shared/.editorconfig
+++ b/workflow-templates/assets/shared/.editorconfig
@@ -1,4 +1,6 @@
 # See: https://editorconfig.org/
+# The formatting style defined in this file is the official standardized style to be used in all Arduino projects and
+# should not be modified.
 # Note: indent style for each file type is defined even when it matches the universal config in order to make it clear
 # that this type has an official style.
 
@@ -29,12 +31,16 @@ indent_style = tab
 indent_size = 2
 indent_style = space
 
-[*.{js,jsx,json,ts,tsx}]
+[*.{js,jsx,json,jsonc,json5,ts,tsx}]
 indent_size = 2
 indent_style = space
 
 [*.{md,mdx,mkdn,mdown,markdown}]
 indent_size = unset
+indent_style = space
+
+[*.proto]
+indent_size = 2
 indent_style = space
 
 [*.py]
