--- a/.codespellrc
+++ b/.codespellrc
@@ -2,7 +2,7 @@
 [codespell]
 builtin = clear,informal,en-GB_to_en-US
 # In the event of a false positive, add the problematic word, in all lowercase, to a comma-separated list here:
-ignore-words-list = licence
+ignore-words-list = licence,ot
 check-filenames =
 check-hidden =
 skip = ./.git
