Update GitHub documentation URLs
The GitHub documentation web pages seem to be in a constant state of flux, with the URLs changing every few months. They
usually set up redirects, but it's best not to rely on them, so here we have the latest URLs as of today.

--- a/.github/workflows/check-sync.yml
+++ b/.github/workflows/check-sync.yml
@@ -8,7 +8,7 @@
 
 name: Check File Duplicates Sync
 
-# See: https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows
+# See: https://docs.github.com/en/actions/reference/events-that-trigger-workflows
 on:
   push:
   pull_request:
