--- a/.github/workflows/check-general-formatting.yml
+++ b/.github/workflows/check-general-formatting.yml
@@ -1,7 +1,7 @@
 # Source: https://github.com/arduino/.github/blob/master/workflow-templates/check-general-formatting.md
 name: Check General Formatting
 
-# See: https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows
+# See: https://docs.github.com/en/actions/reference/events-that-trigger-workflows
 on:
   push:
   pull_request:
