--- a/workflow-templates/check-mkdocs.yml
+++ b/workflow-templates/check-mkdocs.yml
@@ -1,7 +1,7 @@
 # Source: https://github.com/arduino/.github/blob/master/workflow-templates/check-mkdocs.md
 name: Check documentation website
 
-# See: https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows
+# See: https://docs.github.com/en/actions/reference/events-that-trigger-workflows
 on:
   push:
     paths:
