--- a/workflow-templates/compile-platform-examples-private.yml
+++ b/workflow-templates/compile-platform-examples-private.yml
@@ -1,7 +1,7 @@
 # Source: https://github.com/arduino/.github/blob/master/workflow-templates/compile-platform-examples-private.md
 name: Compile Platform Examples - Private Repo
 
-# See: https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows
+# See: https://docs.github.com/en/actions/reference/events-that-trigger-workflows
 on:
   push:
     paths:
