--- a/workflow-templates/dependabot/workflow-template-copies/.github/workflows/check-json.yml
+++ b/workflow-templates/dependabot/workflow-template-copies/.github/workflows/check-json.yml
@@ -1,7 +1,7 @@
 # Source: https://github.com/arduino/.github/blob/master/workflow-templates/check-json.md
 name: Check JSON
 
-# See: https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows
+# See: https://docs.github.com/en/actions/reference/events-that-trigger-workflows
 on:
   push:
     paths:
