--- a/workflow-templates/dependabot/workflow-template-copies/.github/workflows/spell-check.yml
+++ b/workflow-templates/dependabot/workflow-template-copies/.github/workflows/spell-check.yml
@@ -1,7 +1,7 @@
 # Source: https://github.com/arduino/.github/blob/master/workflow-templates/spell-check.md
 name: Spell Check
 
-# See: https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows
+# See: https://docs.github.com/en/actions/reference/events-that-trigger-workflows
 on:
   push:
   pull_request:
