Add library.properties to path filter of examples compilation workflow
This file has an effect on compilation, so the workflow should run when it has been modified.

--- a/workflow-templates/compile-examples.yml
+++ b/workflow-templates/compile-examples.yml
@@ -6,11 +6,13 @@ on:
   push:
     paths:
       - ".github/workflows/compile-examples.yml"
+      - "library.properties"
       - "examples/**"
       - "src/**"
   pull_request:
     paths:
       - ".github/workflows/compile-examples.yml"
+      - "library.properties"
       - "examples/**"
       - "src/**"
   schedule:
