Update comment re: purpose of "Check Markdown" workflow's schedule trigger
Now that the workflow also checks for broken links, the schedule event trigger has an even more important purpose, which
was not reflected in the explanatory comment.

--- a/.github/workflows/check-markdown.yml
+++ b/.github/workflows/check-markdown.yml
@@ -24,7 +24,7 @@ on:
       - "**.mdown"
       - "**.markdown"
   schedule:
-    # Run every Tuesday at 8 AM UTC to catch breakage caused by changes to markdownlint.
+    # Run every Tuesday at 8 AM UTC to catch breakage caused by external changes.
     - cron: "0 8 * * TUE"
   workflow_dispatch:
   repository_dispatch:
