Add poetry.lock to "Check Python" path filters
The workflow should run on changes to the poetry.lock file.

--- a/workflow-templates/check-python.yml
+++ b/workflow-templates/check-python.yml
@@ -9,6 +9,7 @@ on:
       - "**/.flake8"
       - "**/setup.cfg"
       - "**/tox.ini"
+      - "**/poetry.lock"
       - "**/pyproject.toml"
       - "**.py"
   pull_request:
@@ -17,6 +18,7 @@ on:
       - "**/.flake8"
       - "**/setup.cfg"
       - "**/tox.ini"
+      - "**/poetry.lock"
       - "**/pyproject.toml"
       - "**.py"
   schedule:
