--- a/workflow-templates/dependabot/workflow-template-copies/.github/workflows/test-cpp.yml
+++ b/workflow-templates/dependabot/workflow-template-copies/.github/workflows/test-cpp.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - uses: arduino/cpp-test-action@main
+      - uses: arduino/cpp-test-action@v1
         with:
           runtime-paths: |
             # The list of unit test binary paths to run.
