Fix copy/paste error in comment
The comment explaining the purpose of the `schedule` trigger in the "Check AsciiDoc" workflow mentioned the ShellCheck,
even though that tool is not used in the workflow.

--- a/workflow-templates/check-asciidoc.yml
+++ b/workflow-templates/check-asciidoc.yml
@@ -16,7 +16,7 @@ on:
       - "**.adoc"
       - "**.asciidoc"
   schedule:
-    # Run every Tuesday at 8 AM UTC to catch breakage caused by new checks added to ShellCheck.
+    # Run every Tuesday at 8 AM UTC to catch breakage caused by changes to tools.
     - cron: "0 8 * * TUE"
   workflow_dispatch:
   repository_dispatch:
