Improve the approach for communicating workflow version
Due to different project management approaches, it is sometimes necessary to provide multiple versions of a given
workflow. Previously, this was reflected in the workflow name. However, once the workflow is in use, this information is
only noise and a source for potential confusion. It's only necessary to communicate this information during the template
workflow selection process. For this reason, I am removing the information from the workflow name, leaving it only in the
documentation and metadata.

--- a/workflow-templates/check-javascript-npm.yml
+++ b/workflow-templates/check-javascript-npm.yml
@@ -1,5 +1,5 @@
 # Source: https://github.com/arduino/.github/blob/master/workflow-templates/check-javascript-npm.md
-name: Check JavaScript (NPM)
+name: Check JavaScript
 
 # See: https://docs.github.com/en/actions/reference/events-that-trigger-workflows
 on:
