--- a/workflow-templates/check-cpp.yml
+++ b/workflow-templates/check-cpp.yml
@@ -5,18 +5,16 @@ name: Check C++
 on:
   push:
     paths:
-      - ".github/workflows/check-cpp.yml"
+      - ".github/workflows/check-cpp.ya?ml"
       - ".clang-format"
       - "**.ino"
-      - "**.h"
+      - "**.hh?"
       - "**.hpp"
-      - "**.hh"
       - "**.hxx"
       - "**.cpp"
-      - "**.cc"
+      - "**.cc?"
       - "**.cxx"
       - "**.cp"
-      - "**.c"
       - "**.ipp"
       - "**.ii"
       - "**.ixx"
@@ -26,18 +24,16 @@ on:
       - "**.tpl"
   pull_request:
     paths:
-      - ".github/workflows/check-cpp.yml"
+      - ".github/workflows/check-cpp.ya?ml"
       - ".clang-format"
       - "**.ino"
-      - "**.h"
+      - "**.hh?"
       - "**.hpp"
-      - "**.hh"
       - "**.hxx"
       - "**.cpp"
-      - "**.cc"
+      - "**.cc?"
       - "**.cxx"
       - "**.cp"
-      - "**.c"
       - "**.ipp"
       - "**.ii"
       - "**.ixx"
