--- a/.github/workflows/sync-labels.yml
+++ b/.github/workflows/sync-labels.yml
@@ -5,12 +5,12 @@ name: Sync Labels
 on:
   push:
     paths:
-      - ".github/workflows/sync-labels.yml"
-      - ".github/label-configuration-files/*.yml"
+      - ".github/workflows/sync-labels.ya?ml"
+      - ".github/label-configuration-files/*.ya?ml"
   pull_request:
     paths:
-      - ".github/workflows/sync-labels.yml"
-      - ".github/label-configuration-files/*.yml"
+      - ".github/workflows/sync-labels.ya?ml"
+      - ".github/label-configuration-files/*.ya?ml"
   schedule:
     # Run daily at 8 AM UTC to sync with changes to shared label configurations.
     - cron: "0 8 * * *"
