--- a/workflow-templates/check-action-metadata.yml
+++ b/workflow-templates/check-action-metadata.yml
@@ -5,12 +5,12 @@ name: Check Action Metadata
 on:
   push:
     paths:
-      - ".github/workflows/check-action-metadata.yml"
-      - "action.yml"
+      - ".github/workflows/check-action-metadata.ya?ml"
+      - "action.ya?ml"
   pull_request:
     paths:
-      - ".github/workflows/check-action-metadata.yml"
-      - "action.yml"
+      - ".github/workflows/check-action-metadata.ya?ml"
+      - "action.ya?ml"
   schedule:
     # Run every Tuesday at 8 AM UTC to catch breakage from changes to the JSON schema.
     - cron: "0 8 * * TUE"
