--- a/workflow-templates/check-workflows.yml
+++ b/workflow-templates/check-workflows.yml
@@ -5,12 +5,10 @@ name: Check Workflows
 on:
   push:
     paths:
-      - ".github/workflows/*.yaml"
-      - ".github/workflows/*.yml"
+      - ".github/workflows/*.ya?ml"
   pull_request:
     paths:
-      - ".github/workflows/*.yaml"
-      - ".github/workflows/*.yml"
+      - ".github/workflows/*.ya?ml"
   schedule:
     # Run every Tuesday at 8 AM UTC to catch breakage resulting from changes to the JSON schema.
     - cron: "0 8 * * TUE"
