--- a/workflow-templates/compile-platform-examples-private.yml
+++ b/workflow-templates/compile-platform-examples-private.yml
@@ -5,7 +5,7 @@ name: Compile Platform Examples - Private Repo
 on:
   push:
     paths:
-      - ".github/workflows/compile-platform-examples-private.yml"
+      - ".github/workflows/compile-platform-examples-private.ya?ml"
       - "cores/**"
       - "libraries/**"
       - "variants/**"
@@ -13,7 +13,7 @@ on:
       - "platform.txt"
   pull_request:
     paths:
-      - ".github/workflows/compile-platform-examples-private.yml"
+      - ".github/workflows/compile-platform-examples-private.ya?ml"
       - "cores/**"
       - "libraries/**"
       - "variants/**"
