--- a/workflow-templates/compile-platform-examples.yml
+++ b/workflow-templates/compile-platform-examples.yml
@@ -5,7 +5,7 @@ name: Compile Platform Examples
 on:
   push:
     paths:
-      - ".github/workflows/compile-platform-examples.yml"
+      - ".github/workflows/compile-platform-examples.ya?ml"
       - "cores/**"
       - "libraries/**"
       - "variants/**"
@@ -13,7 +13,7 @@ on:
       - "platform.txt"
   pull_request:
     paths:
-      - ".github/workflows/compile-platform-examples.yml"
+      - ".github/workflows/compile-platform-examples.ya?ml"
       - "cores/**"
       - "libraries/**"
       - "variants/**"
