--- a/workflow-templates/dependabot/workflow-template-copies/.github/workflows/check-prettier-formatting.yml
+++ b/workflow-templates/dependabot/workflow-template-copies/.github/workflows/check-prettier-formatting.yml
@@ -5,7 +5,7 @@ name: Check Prettier Formatting
 on:
   push:
     paths:
-      - ".github/workflows/check-prettier-formatting.yml"
+      - ".github/workflows/check-prettier-formatting.ya?ml"
       - "**/.prettierignore"
       - "**/.prettierrc*"
       # CSS
@@ -92,19 +92,15 @@ on:
       - "**/.clang-tidy"
       - "**/.gemrc"
       - "**/glide.lock"
-      - "**.yml"
+      - "**.ya?ml*"
       - "**.mir"
       - "**.reek"
       - "**.rviz"
       - "**.sublime-syntax"
       - "**.syntax"
-      - "**.yaml"
-      - "**.yaml-tmlanguage"
-      - "**.yaml.sed"
-      - "**.yml.mysql"
   pull_request:
     paths:
-      - ".github/workflows/check-prettier-formatting.yml"
+      - ".github/workflows/check-prettier-formatting.ya?ml"
       - "**/.prettierignore"
       - "**/.prettierrc*"
       # CSS
@@ -191,16 +187,12 @@ on:
       - "**/.clang-tidy"
       - "**/.gemrc"
       - "**/glide.lock"
-      - "**.yml"
+      - "**.ya?ml*"
       - "**.mir"
       - "**.reek"
       - "**.rviz"
       - "**.sublime-syntax"
       - "**.syntax"
-      - "**.yaml"
-      - "**.yaml-tmlanguage"
-      - "**.yaml.sed"
-      - "**.yml.mysql"
   schedule:
     # Run every Tuesday at 8 AM UTC to catch breakage caused by changes to Prettier.
     - cron: "0 8 * * TUE"
