--- a/workflow-templates/dependabot/workflow-template-copies/.github/workflows/report-size-deltas.yml
+++ b/workflow-templates/dependabot/workflow-template-copies/.github/workflows/report-size-deltas.yml
@@ -5,7 +5,7 @@ name: Report Size Deltas
 on:
   push:
     paths:
-      - ".github/workflows/report-size-deltas.yml"
+      - ".github/workflows/report-size-deltas.ya?ml"
   schedule:
     # Run at the minimum interval allowed by GitHub Actions.
     # Note: GitHub Actions periodically has outages which result in workflow failures.
