--- a/workflow-templates/assets/check-typescript/.eslintrc.yml
+++ b/workflow-templates/assets/check-typescript/.eslintrc.yml
@@ -2,7 +2,9 @@
 # The code style defined in this file is the official standardized style to be used in all Arduino projects and should
 # not be modified.
 
-extends: airbnb-typescript/base
+extends:
+  - airbnb-typescript/base
+  - prettier
 plugins:
   - "@typescript-eslint"
 parser: "@typescript-eslint/parser"
