Add common generated file names to codespell ignore list
These files should not ever be checked for misspelled words.

--- a/workflow-templates/assets/spell-check/.codespellrc
+++ b/workflow-templates/assets/spell-check/.codespellrc
@@ -5,4 +5,4 @@ ignore-words-list = ,
 builtin = clear,informal,en-GB_to_en-US
 check-filenames =
 check-hidden =
-skip = ./.git
+skip = ./.git,./go.mod,./go.sum,./package-lock.json,./poetry.lock,./yarn.lock
