Add testdata folders to "Test Go" paths filter
It seems a common convention to put test data under a folder named testdata, so the tests should run on any change to any
file under a folder named testdata anywhere in the repository.

--- a/workflow-templates/dependabot/workflow-template-copies/.github/workflows/test-go-task.yml
+++ b/workflow-templates/dependabot/workflow-template-copies/.github/workflows/test-go-task.yml
@@ -10,6 +10,7 @@ on:
       - "go.sum"
       - "Taskfile.ya?ml"
       - "**.go"
+      - "**/testdata/**"
   pull_request:
     paths:
       - ".github/workflows/test-go-task.ya?ml"
@@ -17,6 +18,7 @@ on:
       - "go.sum"
       - "Taskfile.ya?ml"
       - "**.go"
+      - "**/testdata/**"
   workflow_dispatch:
   repository_dispatch:
 
