Suppress excessive output from Go linting step
By default, Task echos the commands when running a task. That is usually helpful, or at least not harmful. However, in
cases where a command consists of a large amount of shell commands, it ends up being a lot of noise that makes reading
the relevant output difficult and confusing.

--- a/workflow-templates/check-go-task.yml
+++ b/workflow-templates/check-go-task.yml
@@ -54,7 +54,7 @@ jobs:
           version: 3.x
 
       - name: Check style
-        run: task go:lint
+        run: task --silent go:lint
 
   check-formatting:
     runs-on: ubuntu-latest
