--- a/workflow-templates/compile-examples-private.yml
+++ b/workflow-templates/compile-examples-private.yml
@@ -1,5 +1,5 @@
 # Source: https://github.com/arduino/.github/blob/master/workflow-templates/compile-examples-private.md
-name: Compile Examples - Private Repo
+name: Compile Examples
 
 # See: https://docs.github.com/en/actions/reference/events-that-trigger-workflows
 on:
