Use new arduino/setup-task action name in CI/CD workflows
The GitHub Actions action for installing Task has graduated from its original home in the experimental `arduino/action`
repository with a move to a dedicated permanent repository at `arduino/setup-task`.

A 1.0.0 release has been made and a `v1` ref that will track all releases in the major version 1 series. Use of the
action's major version ref will cause the workflow to benefit from ongoing development to the action at each patch or
minor release up until such time as a new major release is made. At this time the user will be given the opportunity
to evaluate whether any changes to the workflow are required by the breaking change that triggered the major release
before manually updating the major ref in the workflows (e.g., `uses: arduino/setup-task@v2`).

--- a/workflow-templates/check-python-task.yml
+++ b/workflow-templates/check-python-task.yml
@@ -43,7 +43,7 @@ jobs:
         run: pip install poetry
 
       - name: Install Task
-        uses: arduino/actions/setup-taskfile@master
+        uses: arduino/setup-task@v1
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           version: 3.x
@@ -67,7 +67,7 @@ jobs:
         run: pip install poetry
 
       - name: Install Task
-        uses: arduino/actions/setup-taskfile@master
+        uses: arduino/setup-task@v1
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           version: 3.x
