--- a/workflow-templates/compile-platform-examples.yml
+++ b/workflow-templates/compile-platform-examples.yml
@@ -1,5 +1,5 @@
 # Source: https://github.com/arduino/.github/blob/master/workflow-templates/compile-platform-examples.md
-name: Compile Platform Examples
+name: Compile Examples
 
 # See: https://docs.github.com/en/actions/reference/events-that-trigger-workflows
 on:
