Add source link to all assets
This will make it easy for the source of the file to be found to facilitate syncs in either direction.

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,4 @@
+# Source: https://github.com/arduino/.github/blob/master/workflow-templates/assets/shared/.editorconfig
 # See: https://editorconfig.org/
 # The formatting style defined in this file is the official standardized style to be used in all Arduino projects and
 # should not be modified.
