--- a/workflow-templates/assets/mkdocs/mkdocs.yml
+++ b/workflow-templates/assets/mkdocs/mkdocs.yml
@@ -1,3 +1,4 @@
+# Source: https://github.com/arduino/.github/blob/master/workflow-templates/assets/mkdocs/mkdocs.yml
 # See: https://www.mkdocs.org/user-guide/configuration/
 
 # TODO: Fill in all blank fields below.
