--- a/workflow-templates/assets/mkdocs/requirements.txt
+++ b/workflow-templates/assets/mkdocs/requirements.txt
@@ -1,3 +1,4 @@
+# Source: https://github.com/arduino/.github/blob/master/workflow-templates/assets/mkdocs/requirements.txt
 # See: https://pip.pypa.io/en/stable/reference/pip_install/#requirements-file-format
 
 mkdocs
