--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -1,3 +1,4 @@
+# Source: https://github.com/arduino/.github/blob/master/workflow-templates/assets/check-yaml/.yamllint.yml
 # See: https://yamllint.readthedocs.io/en/stable/configuration.html
 # The code style defined in this file is the official standardized style to be used in all Arduino projects and should
 # not be modified.
