--- a/workflow-templates/assets/check-javascript/.eslintrc.yml
+++ b/workflow-templates/assets/check-javascript/.eslintrc.yml
@@ -1,3 +1,4 @@
+# Source: https://github.com/arduino/.github/blob/master/workflow-templates/assets/check-javascript/.eslintrc.yml
 # See: https://eslint.org/docs/user-guide/configuring/
 # The code style defined in this file is the official standardized style to be used in all Arduino projects and should
 # not be modified.
