--- a/workflow-templates/assets/check-packaging-ncc-typescript-task/Taskfile.yml
+++ b/workflow-templates/assets/check-packaging-ncc-typescript-task/Taskfile.yml
@@ -1,3 +1,4 @@
+# Source: https://github.com/arduino/.github/blob/master/workflow-templates/assets/check-packaging-ncc-typescript-task/Taskfile.yml
 # See: https://taskfile.dev/#/usage
 version: "3"
 
