--- a/workflow-templates/assets/check-python/pyproject.toml
+++ b/workflow-templates/assets/check-python/pyproject.toml
@@ -1,3 +1,4 @@
+# Source: https://github.com/arduino/.github/blob/master/workflow-templates/assets/check-python/pyproject.toml
 # See: https://black.readthedocs.io/en/stable/pyproject_toml.html
 # The code style defined in this file is the official standardized style to be used in all Arduino projects and should
 # not be modified.
