--- a/workflow-templates/assets/check-typescript/.eslintrc.yml
+++ b/workflow-templates/assets/check-typescript/.eslintrc.yml
@@ -1,3 +1,4 @@
+# Source: https://github.com/arduino/.github/blob/master/workflow-templates/assets/check-typescript/.eslintrc.yml
 # See: https://github.com/typescript-eslint/typescript-eslint/blob/master/docs/getting-started/linting/README.md#configuration
 # The code style defined in this file is the official standardized style to be used in all Arduino projects and should
 # not be modified.
