--- a/workflow-templates/assets/shared/.editorconfig
+++ b/workflow-templates/assets/shared/.editorconfig
@@ -1,3 +1,4 @@
+# Source: https://github.com/arduino/.github/blob/master/workflow-templates/assets/shared/.editorconfig
 # See: https://editorconfig.org/
 # The formatting style defined in this file is the official standardized style to be used in all Arduino projects and
 # should not be modified.
