--- a/workflow-templates/assets/spell-check/.codespellrc
+++ b/workflow-templates/assets/spell-check/.codespellrc
@@ -1,3 +1,4 @@
+# Source: https://github.com/arduino/.github/blob/master/workflow-templates/assets/spell-check/.codespellrc
 # See: https://github.com/codespell-project/codespell#using-a-config-file
 [codespell]
 # In the event of a false positive, add the problematic word, in all lowercase, to a comma-separated list here:
