--- a/workflow-templates/assets/sync-labels/universal.yml
+++ b/workflow-templates/assets/sync-labels/universal.yml
@@ -1,3 +1,4 @@
+# Source: https://github.com/arduino/.github/blob/master/workflow-templates/assets/sync-labels/universal.yml
 # See: https://github.com/Financial-Times/github-label-sync#label-config-file
 # Maximum lengths:
 # name: 50
