Add label config schema to "Check Configuration Files" path filter
The "Check Configuration Files" workflow validates the GitHub repository labels configuration file against a JSON schema.
For this reason, the workflow should be triggered on every change to the JSON schema file.

--- a/.github/workflows/check-configs.yml
+++ b/.github/workflows/check-configs.yml
@@ -8,6 +8,7 @@ on:
       - "**/.eslintrc.yml"
       - "**/.markdownlint.yml"
       - "**/dependabot.yml"
+      - "workflow-templates/assets/sync-labels/arduino-gh-label-configuration-schema.json"
       - "workflow-templates/assets/sync-labels/*.yml"
   pull_request:
     paths:
@@ -15,6 +16,7 @@ on:
       - "**/.eslintrc.yml"
       - "**/.markdownlint.yml"
       - "**/dependabot.yml"
+      - "workflow-templates/assets/sync-labels/arduino-gh-label-configuration-schema.json"
       - "workflow-templates/assets/sync-labels/*.yml"
   schedule:
     # Run every Tuesday at 8 AM UTC to catch breakage resulting from changes to the JSON schema.
