--- a/.github/workflows/check-markdown.yml
+++ b/.github/workflows/check-markdown.yml
@@ -1,4 +1,4 @@
-# Source: https://github.com/arduino/.github/blob/master/workflow-templates/check-markdown.md
+# Source: https://github.com/per1234/.github/blob/main/workflow-templates/check-markdown.md
 name: Check Markdown
 
 # See: https://docs.github.com/en/actions/reference/events-that-trigger-workflows
