--- a/workflow-templates/assets/check-json/.eslintrc.yml
+++ b/workflow-templates/assets/check-json/.eslintrc.yml
@@ -1,4 +1,4 @@
-# Source: https://github.com/arduino/.github/blob/master/workflow-templates/assets/check-json/.eslintrc.yml
+# Source: https://github.com/per1234/.github/blob/main/workflow-templates/assets/check-json/.eslintrc.yml
 # See: https://ota-meshi.github.io/eslint-plugin-jsonc/rules/
 # The code style defined in this file is the official standardized style to be used in all Arduino projects and should
 # not be modified.
