--- a/workflow-templates/check-packaging-ncc-typescript-task.yml
+++ b/workflow-templates/check-packaging-ncc-typescript-task.yml
@@ -1,4 +1,4 @@
-# Source: https://github.com/arduino/.github/blob/master/workflow-templates/check-packaging-ncc-typescript-task.md
+# Source: https://github.com/per1234/.github/blob/main/workflow-templates/check-packaging-ncc-typescript-task.md
 name: Check Packaging
 
 on:
