--- a/workflow-templates/check-prettier-formatting-npm.yml
+++ b/workflow-templates/check-prettier-formatting-npm.yml
@@ -1,4 +1,4 @@
-# Source: https://github.com/arduino/.github/blob/master/workflow-templates/check-prettier-formatting-npm.md
+# Source: https://github.com/per1234/.github/blob/main/workflow-templates/check-prettier-formatting-npm.md
 name: Check Prettier Formatting
 
 # See: https://docs.github.com/en/actions/reference/events-that-trigger-workflows
