--- a/workflow-templates/compile-examples.yml
+++ b/workflow-templates/compile-examples.yml
@@ -1,4 +1,4 @@
-# Source: https://github.com/arduino/.github/blob/master/workflow-templates/compile-examples.md
+# Source: https://github.com/per1234/.github/blob/main/workflow-templates/compile-examples.md
 name: Compile Examples
 
 # See: https://docs.github.com/en/actions/reference/events-that-trigger-workflows
