--- a/workflow-templates/dependabot/workflow-template-copies/.github/workflows/check-general-formatting.yml
+++ b/workflow-templates/dependabot/workflow-template-copies/.github/workflows/check-general-formatting.yml
@@ -1,4 +1,4 @@
-# Source: https://github.com/arduino/.github/blob/master/workflow-templates/check-general-formatting.md
+# Source: https://github.com/per1234/.github/blob/main/workflow-templates/check-general-formatting.md
 name: Check General Formatting
 
 # See: https://docs.github.com/en/actions/reference/events-that-trigger-workflows
