--- a/workflow-templates/dependabot/workflow-template-copies/.github/workflows/test-cpp.yml
+++ b/workflow-templates/dependabot/workflow-template-copies/.github/workflows/test-cpp.yml
@@ -1,4 +1,4 @@
-# Source: https://github.com/arduino/.github/blob/master/workflow-templates/test-cpp.md
+# Source: https://github.com/per1234/.github/blob/main/workflow-templates/test-cpp.md
 name: Test C++
 
 # See: https://docs.github.com/en/actions/reference/events-that-trigger-workflows
